# SDL3-GLEW

./: .gitignore  CMakeLists.txt  a.out  arch.sh  mac.sh  window.cpp
01-Window/: arch.sh  main.cpp
02-Triangle/: mac.sh  main.cpp
03-Quad/: main.cpp
03-quad/: main.cpp
04-Shaders/: main.cpp
04-ShadersTriangle/: main.cpp
05-Organizing/: arch.sh  mac.sh
05-Organizing/Header/: EBO.h  VAO.h  VBO.h  shaderClass.h
05-Organizing/Shaders/: default.frag  default.vert
05-Organizing/Source/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
05-ShadersQuad/: main.cpp
06-Organizing/Header/: EBO.h  VBO.h
06-Organizing/Shaders/: default.frag  default.vert
06-Organizing/Source/: main.cpp
06-Textures/: arch.sh  mac.sh
06-Textures/Header/: Texture.h  VAO.h
06-Textures/Shaders/: default.vert
06-Textures/Source/: main.cpp
07-3DTextures/: mac.sh
07-3DTextures/Shaders/: default.vert
07-3DTextures/Source/: main.cpp
08-Camera/Header/: Camera.h
08-Camera/Shaders/: default.frag  default.vert
08-Camera/Source/: Camera.cpp  EBO.cpp  Texture.cpp  main.cpp
09-Lighting/: arch.sh  mac.sh
09-Lighting/Header/: shaderClass.h
09-Lighting/Shaders/: default.frag  default.vert
09-Lighting/Source/: main.cpp  shaderClass.cpp
